// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders NavigationPills correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <label
              data-radium={true}
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            >
              Filter by
            </label>
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
      overflow-x: scroll !important;
      display: block !important;
      -ms-overflow-style: none !important;
      overflow: -moz-scrollbars-none !important;
      webkit-overflow-scrolling: touch !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills wihtout label correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
      overflow-x: scroll !important;
      display: block !important;
      -ms-overflow-style: none !important;
      overflow: -moz-scrollbars-none !important;
      webkit-overflow-scrolling: touch !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills with elementAttributes correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            ariaLabel="this is an aria label"
            data-radium={true}
            role="tabs"
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <label
              data-radium={true}
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            >
              Filter by
            </label>
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
      overflow-x: scroll !important;
      display: block !important;
      -ms-overflow-style: none !important;
      overflow: -moz-scrollbars-none !important;
      webkit-overflow-scrolling: touch !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills without pills correctly 1`] = `
<div
  data-radium={true}
>
  <div />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
